--- a/app/src/main/res/layout/activity_profil_res.xml
+++ b/app/src/main/res/layout/activity_profil_res.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:fillViewport="false">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
-    android:padding="24dp"
-    tools:context=".MainActivity">
-
+    android:gravity="center">
     <ImageView
         android:id="@+id/gambarPahlawan"
         android:layout_width="wrap_content"
@@ -30,7 +32,6 @@
         android:id="@+id/txJudul"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
         android:text="Kategori Pahlawan"
         android:textColor="@color/black"
         android:textSize="14sp" />
@@ -46,8 +47,9 @@
         android:id="@+id/txDeskripsi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="8dp"
-        android:gravity="center"
         android:text="Deskripsi hewan" />
 
     <LinearLayout
@@ -89,5 +91,6 @@
             android:layout_margin="4dp"
             android:text="LAST" />
     </LinearLayout>
-
 </LinearLayout>
+</LinearLayout>
+</ScrollView>
